--- a/src/App.less
+++ b/src/App.less
@@ -14,7 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  top: 100px;
+  background-color: #560c86;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +36,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.header-red {
+  background-color: red;
+}
+
+.header-blue {
+  background-color: blue;
 }
