Задание: 1. Добавить в компонент App поле стейта messageList. В нем хранить массив объектов - сообщений (объект должен содержать, как минимум, поля text и author). Начальное значение - пустой массив). - Сделал сам. 2. Рендерить список сообщений через map. - сделал сам. 3. Добавить и стилизовать форму - поле для ввода текста и кнопка для отправки сообщения. При отправке сообщения обновление UI должно происходить за счет обновления стейта App. сделал посмотрев видео, у самого не получилось. 4. Добавить в App useEffect - на каждое отправленное пользователем сообщение должен отвечать робот (должно автоматически отправляться сообщение с фиксированным текстом) - для этого необходимо проверять автора последнего сообщения. -сделал посмотрев видео, у самого не получилось. 5. * Сделать задержку ответа робота - сообщение от него должно отправляться через некоторый промежуток времени после отправки сообщения пользователя (напр., 1.5 сек). - сделал посмотрев видео.

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,60 @@
 .App {
   text-align: center;
+  width: 600px;
+  min-height: 550px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  flex-direction: column;
 }
+
+.dashboard {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  min-height: 500px;
+  margin: auto;
+  background-color: #D636C9;
+  border-radius: 10px;
+  padding: 25px;
+
+}
+
+.styleMessages {
+  font-size: 20px;
+  color: black;
+  border: 1px solid black;
+  margin-top: 5px;
+  width: auto;
+  background-color: #9DB82E;
+  padding: 5px;
+  border-radius: 7px
+}
+
+.styleMessages.me {
+  text-align: right;
+}
+
+.styleMessages.bot {
+  text-align: left;
+}
+
+.controlPanel {
+
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
 .App-header {
   top: 100px;
   background-color: #560c86;
@@ -21,9 +66,11 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
 .App-link {
   color: #61dafb;
 }
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -32,10 +79,11 @@
     transform: rotate(360deg);
   }
 }
+
 .header-red {
   background-color: red;
 }
+
 .header-blue {
   background-color: blue;
 }
-/*# sourceMappingURL=App.css.map */
