--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,47 @@
 .App {
   text-align: center;
+  width: 600px;
+  min-height: 550px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  flex-direction: column;
+}
+
+.dashboard {
+  display: flex;
+  flex-direction: column-reverse;
+  width: 500px;
+  min-height: 500px;
+  margin: auto;
+  background-color: #D636C9;
+  border-radius: 10px;
+  padding: 25px;
+
+}
+
+.styleMessages {
+  font-size: 20px;
+  color: black;
+  border: 1px solid black;
+  margin-top: 5px;
+  width: auto;
+  background-color: #9DB82E;
+  padding: 5px;
+  border-radius: 7px;
+
+  &.me {
+    text-align: right;
+  };
+
+  &.bot {
+    text-align: left;
+  }
+}
+
+.controlPanel {
+
 }
 
 .App-logo {
