--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,13 @@
 .App {
   text-align: center;
-  width: 600px;
+  width: 900px;
   min-height: 550px;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
   padding: 40px;
-  flex-direction: column;
+  flex-direction: row;
 }
-
 .dashboard {
   display: flex;
   flex-direction: column;
@@ -18,9 +17,7 @@
   background-color: #D636C9;
   border-radius: 10px;
   padding: 25px;
-
 }
-
 .styleMessages {
   font-size: 20px;
   color: black;
@@ -29,32 +26,28 @@
   width: auto;
   background-color: #9DB82E;
   padding: 5px;
-  border-radius: 7px
+  border-radius: 7px;
 }
-
 .styleMessages.me {
   text-align: right;
 }
-
 .styleMessages.bot {
   text-align: left;
 }
-
 .controlPanel {
-
+  margin: 10px 20px;
+  display: flex;
+  width: 300px;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
   top: 100px;
   background-color: #560c86;
@@ -66,11 +59,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 .App-link {
   color: #61dafb;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -79,11 +70,28 @@
     transform: rotate(360deg);
   }
 }
-
 .header-red {
   background-color: red;
 }
-
 .header-blue {
   background-color: blue;
 }
+.chatsList {
+  display: flex;
+  flex-direction: column;
+  width: 100px;
+  min-height: 500px;
+  margin: auto;
+  background-color: #D636C9;
+  border-radius: 10px;
+  padding: 25px;
+}
+.chatName {
+  background-color: #D636C9;
+  color: aliceblue;
+}
+.ListFolders {
+  color: aliceblue;
+  font-weight: bold;
+}
+/*# sourceMappingURL=App.css.map */
