--- a/src/App.less
+++ b/src/App.less
@@ -1,17 +1,17 @@
 .App {
   text-align: center;
-  width: 600px;
+  width: 900px;
   min-height: 550px;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
   padding: 40px;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .dashboard {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   width: 500px;
   min-height: 500px;
   margin: auto;
@@ -33,7 +33,8 @@
 
   &.me {
     text-align: right;
-  };
+  }
+;
 
   &.bot {
     text-align: left;
@@ -41,6 +42,9 @@
 }
 
 .controlPanel {
+  margin: 10px 20px;
+  display: flex;
+  width: 300px;
 
 }
 
@@ -86,4 +90,26 @@
 
 .header-blue {
   background-color: blue;
+}
+
+.chatsList {
+  display: flex;
+  flex-direction: column;
+  width: 100px;
+  min-height: 500px;
+  margin: auto;
+  background-color: #D636C9;
+  border-radius: 10px;
+  padding: 25px;
+
+}
+
+.chatName {
+  background-color: #D636C9;
+  color: aliceblue;
+}
+
+.ListFolders {
+  color: aliceblue;
+  font-weight: bold;
 }
