--- a/src/App.less
+++ b/src/App.less
@@ -113,3 +113,21 @@
   color: aliceblue;
   font-weight: bold;
 }
+
+.chatList{
+  color: aliceblue;
+  width: 200px;
+  display: block;
+  a {display: block;
+    padding: 20px;
+    border-bottom: 1px solid aliceblue;
+    &:last-child{
+      border-bottom: none;
+    }
+  }
+}
+
+.chats {
+  display: flex;
+  align-items: flex-start;
+}
