--- a/src/App.less
+++ b/src/App.less
@@ -95,12 +95,19 @@
 .chatsList {
   display: flex;
   flex-direction: column;
-  width: 100px;
-  min-height: 500px;
+  width: 150px;
+  height: 300px;
   margin: auto;
-  background-color: #D636C9;
+  background-color: #04f4fd;
   border-radius: 10px;
   padding: 25px;
+
+}
+
+.box {
+  width: 150px;
+  background-color: #D636C9;
+  display: flex;
 
 }
 
@@ -130,4 +137,5 @@
 .chats {
   display: flex;
   align-items: flex-start;
+
 }
