--- a/src/App.less
+++ b/src/App.less
@@ -107,7 +107,8 @@
 .box {
   width: 150px;
   background-color: #D636C9;
-  display: flex;
+  display: block;
+  right: auto;
 
 }
 
@@ -123,10 +124,13 @@
 
 .chatList{
   color: aliceblue;
-  width: 200px;
+  width: 100px;
   display: block;
-  a {display: block;
-    padding: 20px;
+  font-weight: bold;
+
+  a {display: flex;
+    padding: 5px;
+    margin-left: 20px;
     border-bottom: 1px solid aliceblue;
     &:last-child{
       border-bottom: none;
@@ -138,4 +142,8 @@
   display: flex;
   align-items: flex-start;
 
+}
+
+.userProfile {
+  color: black;
 }
