Домашнее задание №8 Пункты с 1 по 3 выполнил: 1. Добавить страницу, которая будет отображать данные, полученные через API (например, gists; можно воспользоваться любым работающим API из списка, название страницы в этом случае изменить соответствующим образом). 2. Добавить middleware для отправки запроса и обработки ответа, ошибки и состояния загрузки. 3. Отображать на странице данные из API или соответствующее состояние запроса. При ошибке пользователю должна быть доступна возможность отправить запрос заново без перезагрузки всей страницы.

--- a/src/App.less
+++ b/src/App.less
@@ -1,28 +1,3 @@
-.App {
-  text-align: center;
-  width: 900px;
-  min-height: 550px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  padding: 40px;
-  flex-direction: row;
-}
-
-.messenger {
-  display: flex;
-
-  }
-
-.dashboard {
-  margin-left: 130px;
-  width: 500px;
-  height: 500px;
-  background-color: #cad2b0;
-  border-radius: 10px;
-  padding: 25px;
-}
-
 .messages {
   width: 500px;
 }
@@ -40,12 +15,10 @@
 }
 
 .styleMessages {
-  font-size: 20px;
   color: aliceblue;
   border: 1px solid aliceblue;
-  margin-top: 5px;
-  width: auto;
   height: 50px;
+  width: 300px;
   background-color: #72b1e3;
   padding: 5px;
   border-radius: 7px;
@@ -61,10 +34,16 @@
 }
 
 .controlPanel {
-  margin: 10px 20px;
   display: flex;
-  width: 300px;
+  width: 500px;
+  flex-direction: column;
+  margin-left: 25px;
 
+}
+
+.InputButton {
+  display: flex;
+  width: 500px;
 }
 
 .App-logo {
@@ -76,18 +55,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  top: 100px;
-  background-color: #560c86;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
@@ -103,32 +70,15 @@
   }
 }
 
-.header-red {
-  background-color: red;
-}
-
-.header-blue {
-  background-color: blue;
-}
-
 .chatsList {
-  display: flex;
-  flex-direction: row;
   width: 150px;
-  margin: auto;
-  background-color: #04f4fd;
+  height: 600px;
+  //margin: 20px;
+  background-color: #72b1e3;
   border-radius: 10px;
   padding: 25px;
-
 }
 
-.box {
-  width: 150px;
-  background-color: #D636C9;
-  display: block;
-  right: auto;
-
-}
 
 .chatName {
   background-color: #D636C9;
@@ -136,25 +86,24 @@
 }
 
 .ListFolders {
-  color: aliceblue;
   font-weight: bold;
+  color: black;
 }
 
-.chatList{
-  color: aliceblue;
-  width: 100px;
-  display: block;
+.chatList {
+  width: 800px;
   margin-left: 10px;
+  padding: 5px;
 
-
-
-  a {display: flex;
+  a {
+    display: flex;
     height: 36px;
     padding: 5px;
-    margin-left: 20px;
-    border-bottom: 1px solid aliceblue;
+    margin-left: 10px;
     text-decoration: none;
-    &:last-child{
+    color: black;
+
+    &:last-child {
       border-bottom: none;
     }
   }
@@ -176,8 +125,30 @@
 .chatNameBox {
   padding: 20px;
   display: block;
+
   button {
     display: block;
+  }
+
+  .messenger {
+    height: 600px;
+
+  }
+
+
+  .header {
+    width: 300px;
+    display: flex;
+  }
+
+  .dashboard {
+    margin-left: 180px;
+    width: 500px;
+    height: 500px;
+    background-color: #cad2b0;
+    border-radius: 10px;
+    padding: 25px;
+
   }
 
 }
