--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,3 @@
-.App {
-  text-align: center;
-  width: 900px;
-  min-height: 550px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  padding: 40px;
-  flex-direction: row;
-}
-.messenger {
-  display: flex;
-}
-.dashboard {
-  margin-left: 130px;
-  width: 500px;
-  height: 500px;
-  background-color: #cad2b0;
-  border-radius: 10px;
-  padding: 25px;
-}
 .messages {
   width: 500px;
 }
@@ -34,12 +13,10 @@
   border-radius: 7px;
 }
 .styleMessages {
-  font-size: 20px;
   color: aliceblue;
   border: 1px solid aliceblue;
-  margin-top: 5px;
-  width: auto;
   height: 50px;
+  width: 300px;
   background-color: #72b1e3;
   padding: 5px;
   border-radius: 7px;
@@ -51,9 +28,14 @@
   text-align: left;
 }
 .controlPanel {
-  margin: 10px 20px;
   display: flex;
-  width: 300px;
+  width: 500px;
+  flex-direction: column;
+  margin-left: 25px;
+}
+.InputButton {
+  display: flex;
+  width: 500px;
 }
 .App-logo {
   height: 40vmin;
@@ -63,17 +45,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-.App-header {
-  top: 100px;
-  background-color: #560c86;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 .App-link {
   color: #61dafb;
@@ -86,48 +57,33 @@
     transform: rotate(360deg);
   }
 }
-.header-red {
-  background-color: red;
-}
-.header-blue {
-  background-color: blue;
-}
 .chatsList {
-  display: flex;
-  flex-direction: row;
   width: 150px;
-  margin: auto;
-  background-color: #04f4fd;
+  height: 600px;
+  background-color: #72b1e3;
   border-radius: 10px;
   padding: 25px;
-}
-.box {
-  width: 150px;
-  background-color: #D636C9;
-  display: block;
-  right: auto;
 }
 .chatName {
   background-color: #D636C9;
   color: aliceblue;
 }
 .ListFolders {
-  color: aliceblue;
   font-weight: bold;
+  color: black;
 }
 .chatList {
-  color: aliceblue;
-  width: 100px;
-  display: block;
+  width: 800px;
   margin-left: 10px;
+  padding: 5px;
 }
 .chatList a {
   display: flex;
   height: 36px;
   padding: 5px;
-  margin-left: 20px;
-  border-bottom: 1px solid aliceblue;
+  margin-left: 10px;
   text-decoration: none;
+  color: black;
 }
 .chatList a:last-child {
   border-bottom: none;
@@ -148,5 +104,20 @@
 }
 .chatNameBox button {
   display: block;
+}
+.chatNameBox .messenger {
+  height: 600px;
+}
+.chatNameBox .header {
+  width: 300px;
+  display: flex;
+}
+.chatNameBox .dashboard {
+  margin-left: 180px;
+  width: 500px;
+  height: 500px;
+  background-color: #cad2b0;
+  border-radius: 10px;
+  padding: 25px;
 }
 /*# sourceMappingURL=App.css.map */
