--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,11 @@
 }
 .styleMessages {
   color: aliceblue;
-  border: 1px solid aliceblue;
   height: 50px;
-  width: 300px;
+  min-width: 300px;
   background-color: #72b1e3;
   padding: 5px;
-  border-radius: 7px;
+  border-radius: 12px;
 }
 .styleMessages.me {
   text-align: right;
@@ -29,13 +28,13 @@
 }
 .controlPanel {
   display: flex;
-  width: 500px;
+  min-width: 500px;
   flex-direction: column;
   margin-left: 25px;
 }
 .InputButton {
   display: flex;
-  width: 500px;
+  width: 400px;
 }
 .App-logo {
   height: 40vmin;
@@ -114,10 +113,20 @@
 }
 .chatNameBox .dashboard {
   margin-left: 180px;
-  width: 500px;
+  width: 530px;
   height: 500px;
   background-color: #cad2b0;
   border-radius: 10px;
   padding: 25px;
+}
+.chatNameBox .mainMenuButton {
+  justify-content: inherit;
+}
+.chatNameBox .mainMenuItem {
+  justify-content: center;
+}
+.chatNameBox .boxFormSend {
+  display: flex;
+  justify-content: flex-end;
 }
 /*# sourceMappingURL=App.css.map */
